--- a/report/Comparative Study about intelligent Agent on RDF's graph.tex
+++ b/report/Comparative Study about intelligent Agent on RDF's graph.tex
@@ -75,7 +75,7 @@ Stefan Schlobach
 	We used his code as inspiration for our own bees agents (that are programmed in prolog).
 	That work was based on a paper \cite{Gueret10} about Swarm computing.
 	The project repository is on GitHub\footnote{ \url{https://github.com/wouterbeek/DataHives}},
-	it is mostly using SWI-Prolog\footnote{ Official web-site: \url{http://swi-prolog.org/}} language.
+	it is mostly using SWI-Prolog\footnote{ Official website: \url{http://swi-prolog.org/}} language.
 	% \paragraph{} %Introduction to DataHives subsection
 	% \project{Hypothesis}
 	\begin{center}
@@ -84,11 +84,7 @@ Stefan Schlobach
 	to the one obtain by the random agents and also the one induced by the ant walk.
 	We expect to have a high number of cluster of high betweenness centrality on the bee graph,
 	and a pagerank-like graph for the random agents.
-	The ants have a few components\footnote{
-	A subgraph $H$ of $G$ is called a component of $G$ if $H$ is connected
-	and not contained in a connected subgraph of$G$with more vertices or edges.
-	The number of components of $G$ is denoted as $\omega(G)$}
-	and a high connected one}
+	The ants have a few components and a high connected one}
 	\end{center}
 
 	% \subsection{Evaluation}
@@ -120,6 +116,10 @@ Stefan Schlobach
 			$G$ is connected if all pairs of distinct vertices are connected.
 			A digraph $D$ is strongly connected if there exists a directed path between every pair of distinct vertices from $D$.
 			A digraph is weakly connected if its underlying graph is connected.
+		\paragraph{Component}
+			A subgraph $H$ of $G$ is called a component of $G$ if $H$ is connected
+			and not contained in a connected subgraph of$G$with more vertices or edges.
+			The number of components of $G$ is denoted as $\omega(G)$
 		\paragraph{Clustering coefficient}
 			In the book of Maarten Van Steen it is written :
 			"We can express the existence of communities by means of a clustering coefficient"\cite{Steen10}
@@ -133,18 +133,21 @@ Stefan Schlobach
 			\end{cases}
 		\end{align*}
 		\paragraph{Betweenness centrality}
-			Let$G$be a simple, (strongly) connected graph.
+			Let $G$ be a simple, (strongly) connected graph.
 			Let $S(x, y)$ be the set of the shortest paths between two vertices $x, y \in V(G)$,
 			and $S(x, u, y) \subseteq S(x, y)$ the ones that pass through vertex $u \in V (G)$.
 			The betweenness centrality $c_B (u)$ of vertex u is defined as
 		\begin{align*}
 			c_B (u) = \sum \frac{|S(x,u,y)|}{|S(x,y)|}
 		\end{align*}
+		\paragraph{Density}
+			Consider a simple, undirected graph $G$ with $n$ vertices and $m$ edges.
+			The network density $\rho(G)$ of $G$ is defined as $\frac{m}{\binom{2}{n}}$ .
 	\subsection{An agent?}
 		\paragraph{}
 			Our work on the agents is based on this book \cite{Engelbrecht05}.
 			Let's describe what is an agent.
-			An agent is a small program compute to do intelligence on his own.
+			An agent is a small program computed to do intelligence on his own.
 			In our case an agent would do research and entailment,
 			it is also part of a population.
 			It's behaviour is often based on an animal, we will use the bees and the ants for our study.
@@ -187,72 +190,73 @@ Stefan Schlobach
 			It's here where the fitness function should act.
 	\subsection{Random Agent}
 		\subsubsection{Navigate}
-		\paragraph{}
-		The random agent is implemented to go randomly.
-		It is initialized on a set of available URI where to begin.
-		Then it goes, following "links".
-		Those links are the predicates between 2 nodes of the Linked Open Data (LOD).
-		After his walk, his path is a connected graph of every places he has been.
+			\paragraph{}
+				The random agent is implemented to go randomly.
+				It is initialized on a set of available URI where to begin.
+				Then it goes, following "links".
+				Those links are the predicates between 2 nodes of the Linked Open Data (LOD).
+				After his walk, his path is a connected graph of every places he has been.
 		\subsubsection{Communicate}
-		\paragraph{}
-		The communication is not implemented to stick a really basic agent attitude that will serve as reference for efficiency.
+			\paragraph{}
+				The communication is not implemented to stick a really basic agent attitude that will serve as reference for efficiency.
 		\subsubsection{Evaluate}
-		\paragraph{}
-		The evaluation function is not set for this kind of agent that keep going whatever happens.
+			\paragraph{}
+				The evaluation function is not set for this kind of agent that keep going whatever happens.
 		\subsubsection{At exit}
-		\paragraph{}
-		This predicate is not used because it is really bound to the evaluation that we discarded.
+			\paragraph{}
+				This predicate is not used because it is really bound to the evaluation that we discarded.
 	\subsection{Ant Agent}
 		\subsubsection{Navigate}
-		\paragraph{}
-		The ant navigation is based on randomness but a weighted one.
-		Like an ordinary ant, our agent has to pick a path, depending on the pheromones left on it.
-		On the virtual web of the LOD, the pheromones are coefficient left on edges from one node to the other.
-		If another ant went here before, the path get more value.
+			\paragraph{}
+				The ant navigation is based on randomness but a weighted one.
+				Like an ordinary ant, our agent has to pick a path, depending on the pheromones left on it.
+				On the virtual web of the LOD, the pheromones are coefficient left on edges from one node to the other.
+				If another ant went here before, the path get more value.
 		\subsubsection{Communicate}
-		\paragraph{}
-		As said above, an ant leave pheromones wisely.
-		The insect is looking for food (= information) outside (= on the LOD).
-		When it has found something, it goes back to the anthill and leave pheromones on its way back as well.
-		The main idea here is to up value a path which leads to food and devalue one that leads nowhere (ie dead-end path).
-		To represent this virtually here was our main ideas $c \in \mathbb{R}$:
-		\begin{itemh}
-		\item Devalue dead end path, using SPARQL queries to go back and degrade the weight of the path of $c$
-		\item Adding $c$ to all the travelled path for each information deduced
-		\item Adding the agent's current fitness to the current edge
-		\end{itemh}
-		\paragraph{}
-		All those ideas needs to be evaluated and tried to see which one is the more efficient and if we could cross them.
+			\paragraph{}
+				As said above, an ant leave pheromones wisely.
+				The insect is looking for food (= information) outside (= on the LOD).
+				When it has found something, it goes back to the anthill and leave pheromones on its way back as well.
+				The main idea here is to up value a path which leads to food and devalue one that leads nowhere (ie dead-end path).
+				To represent this virtually here was our main ideas $c \in \mathbb{R}$:
+			\begin{itemh}
+			\item Devalue dead end path, using SPARQL queries to go back and degrade the weight of the path of $c$
+			\item Adding $c$ to all the travelled path for each information deduced
+			\item Adding the agent's current fitness to the current edge
+			\end{itemh}
+			\paragraph{}
+				All those ideas needs to be evaluated and tried to see which one is the more efficient and if we could cross them.
 		\subsubsection{Evaluate}
-		\paragraph{}
-		The evaluation is where the fitness function enter in the game.
-		For the ants, the fitness function is quantitative,
-		counting the number of triples discovered via deduction and dividing it by the number of steps taken.
-		If that number is bigger than 0.5, the agent can live, otherwise it dies launching the exit function.
+			\paragraph{}
+				The evaluation is where the fitness function enter in the game.
+				For the ants, the fitness function is quantitative,
+				counting the number of triples discovered via deduction and dividing it by the number of steps taken.
+				If that number is bigger than 0.5, the agent can live, otherwise it dies launching the exit function.
 		\subsubsection{At exit}
-		\paragraph{}
-		When the time comes for an agent to kill himself, it is decided that it must launch another agent to replace him.
-		And so, the agent launch another agent that will work to get more information that the previous one if possible.
+			\paragraph{}
+				When the time comes for an agent to kill himself, it is decided that it must launch another agent to replace him.
+				And so, the agent launch another agent that will work to get more information that the previous one if possible.
 	\subsection{Bee Agent}
 		\subsubsection{Navigate}
-		\paragraph{}
-		A bee navigates randomly, whatever her role is.
-		A scout jumps from one place to another one (that could be at the opposite side of the whole graph).
-		However, a forager navigates like a random agent: following links.
-		The scouts are wandering around to try to find information.
-		When one succeed, it tells some others (called forager) to come and grab the "pollen" it has found.
+			\paragraph{}
+				A bee navigates randomly, whatever her role is.
+				A scout jumps from one place to another one (that could be at the opposite side of the whole graph).
+				However, a forager navigates like a random agent: following links.
+				The scouts are wandering around to try to find information.
+				When one succeed, it tells some others (called forager) to come and grab the "pollen" it has found.
 		\subsubsection{Communicate}
-		\paragraph{}
-		Here the communication is really simple.
-		It directly contacts the other agent to tell them something: the information is not sustainable, it is not stored somewhere.
-		The information send is used instantly (it makes it more easy to set up).
+			\paragraph{}
+				Here the communication is really simple.
+				It directly contacts the other agent to tell them something:
+				the information is not sustainable, it is not stored somewhere.
+				The information send is used instantly (it makes it more easy to set up).
 		\subsubsection{Evaluate}
-		\paragraph{}
-		The evaluation is based on the same criteria of the one for the ants but here it triggers an action.
-		If the fitness is big enough we send some foragers helping the scout, but if it is too low ... the agent get killed.
+			\paragraph{}
+				The evaluation is based on the same criteria of the one for the ants but here it triggers an action.
+				If the fitness is big enough we send some foragers helping the scout, but if it is too low ... the agent get killed.
 		\subsubsection{At exit}
-		\paragraph{}
-		At the end of the thread we also ask for another agent to replace the bad one and keep sustainability in getting information.
+			\paragraph{}
+				At the end of the thread we also ask for another agent to replace the bad one and keep sustainability in getting information.
 
 \section{Implementation}
 	\subsection{Developing tools}
@@ -262,140 +266,183 @@ Stefan Schlobach
 			Prolog is declarative: the program logic is expressed in terms of relations, represented as facts and rules.
 			A computation is initiated by running a query over these relations.
 		\subsubsection{Emacs}
-		Emacs for Prolog has been used a lot.
-		The asset of this text editor was to put a semantic text colouration
-		or just simply show within the code if a specific module was necessary or not.
-		It was also used by the debugger, with the same text colouration (useful if you don't want to get lost).
+			Emacs for Prolog has been used a lot.
+			The asset of this text editor was to put a semantic text colouration
+			or just simply show within the code if a specific module was necessary or not.
+			It was also used by the debugger, with the same text colouration (useful if you don't want to get lost).
 	\subsection{Debug tool}
 		\subsubsection{Web UI}
-		\paragraph{}
-		This section will present to you what features already implemented in the project are in use.
-		What we have access in this interface to the graph the agents have been crawling.
-		It is a way of visualize the graph that as been created by the agents.
-		It has also been used as a debug tool: if the graph contained only one node with one edge where the agent passed 200 times,
-		that means that there is something fishy about the navigation strategy.
-		Another good example was with the bee algorithm, where a lot of nodes where alone, with no neighbours.
-		In that case, it meant that the communication or the evaluation was wrong (either calling forager or the fitness were bad).
-		\begin{figure}[!h]
-		\hspace{-2cm}
-		\includegraphics[width=1.4\textwidth]{../dh_graph}
-		\captionof{figure}{Sketch of the graph}
-		\end{figure}
-		\paragraph{}
-		This Web interface also enable show a table containing all the agents working at the moment
-		on the graph with their status.
-		If one of the agent crash, it shows up and the reason why.
+			\paragraph{}
+				This section will present to you what features already implemented in the project are in use.
+				What we have access in this interface to the graph the agents have been crawling.
+				It is a way of visualize the graph that as been created by the agents.
+				It has also been used as a debug tool: if the graph contained only one node with one edge where the agent passed 200 times,
+				that means that there is something fishy about the navigation strategy.
+				Another good example was with the bee algorithm, where a lot of nodes where alone, with no neighbours.
+				In that case, it meant that the communication or the evaluation was wrong (either calling forager or the fitness were bad).
+			\begin{figure}[!h]
+				\hspace{-2cm}
+				\includegraphics[width=1.4\textwidth]{../dh_graph}
+				\captionof{figure}{Sketch of the graph}
+			\end{figure}
+			\paragraph{}
+				This Web interface also enable show a table containing all the agents working at the moment
+				on the graph with their status.
+				If one of the agent crash, it shows up and the reason why.
 		\subsubsection{Debugger}
-		\paragraph{}
-		The debugger was one of the main debug tool used.
-		It enables the developer to get step by step into the code.
-		It has been used to find how does the code works, because the project was already quite big when I started working on it.
+			\paragraph{}
+				The debugger was one of the main debug tool used.
+				It enables the developer to get step by step into the code.
+				It has been used to find how does the code works, because the project was already quite big when I started working on it.
 
 \section{Evaluation}
 	\subsection{Quantitative Evaluation}
-	\paragraph{}
-	First, we want to compare the agents over the number of deductions over the time they are running.
-	It is something simple to count and objective, but it may be not relevant (if we look at the semantic part).
-	To be more accurate, we have used 100 agents of each category, and run them for a certain time.
-	Of course, it is running on the same machine to have the same environment as much as possible.
-	\begin{center}
-	\textit{Place for a future graph, comparing agents x = time, y = deductions}
-	\end{center}
-	\paragraph{}
-	Description of the graph and deductions
+		\paragraph{}
+			First, we want to compare the agents over the number of deductions over the time they are running.
+			It is something simple to count and objective, but it may be not relevant (if we look at the semantic part).
+			To be more accurate, we have used 100 agents of each category, and run them for a certain time.
+			Of course, it is running on the same machine to have the same environment as much as possible.
+		\begin{center}
+			\textit{Place for a future graph, comparing agents x = time, y = deductions}
+		\end{center}
+		\paragraph{}
+			Description of the graph and deductions
 	\subsection{Find the right size graph}
-	\paragraph{}
-	Several options were open for the agents' evaluation.
-	First of all, testing the agents on the LOD cloud and then working on the results.
-	This try gave us trouble because finding a random triple on the LOD cloud is really slow,
-	thus, the tests about the bees agents are not feasible (using a random triple for each cycle).
-	In answer to this, taking a dataset from the data laundry was an interesting solution.
-	We tried a data set of size 1,001 triples, another of 1,003,529 triples and the biggest one of around 10,000,000 triples.
-	The first one was too small to execute relevant tests (each time all the graph was totally crawled several times).
-	The biggest one was the second try but gave too few results due to the huge size of it.
-	The last one gave the more encouraging results with a runtime of 30min.
+		\paragraph{}
+			Several options were open for the agents' evaluation.
+			First of all, testing the agents on the LOD cloud and then working on the results.
+			This try gave us trouble because finding a random triple on the LOD cloud is really slow,
+			thus, the tests about the bees agents are not feasible (using a random triple for each cycle).
+			In answer to this, taking a dataset from the data laundry was an interesting solution.
+			We tried a data set of size 1,001 triples, another of 1,003,529 triples and the biggest one of around 10,000,000 triples.
+			The first one was too small to execute relevant tests (each time all the graph was totally crawled several times).
+			The biggest one was the second try but gave too few results due to the huge size of it.
+			The last one gave the more encouraging results with a runtime of 30min.
 	\subsection{Graph figures comparison}
-	\paragraph{}
-	We formulate in the hypothesis that the crawled graph must differ between every kind of agents.
-	To prove this, we have been using Gephi\footnote{
-	Here is the software website \url{https://gephi.github.io/}
-	} to dig out some figures of our graphs.
-	The more representation figures were the betweenness centrality and the clustering coefficient.
-	The work on the graph is based on the content of the class "Networks ans graphs" followed this year,
-	which was referenced on this book \cite{Steen10}.
-	\paragraph{Test with 1 scout and 1000 steps}
-	The graph we got from such a configuration contains 1209 nodes and 998 edges.
-	The plot below is showing the curve of the nodes where the betweenness centrality is higher than 0.
-	1120 nodes have a null value for betweenness centrality, they are not represented here for more readability.
-	There are 211 components.
-	The clustering coefficient is almost always equal to zero.
-
-	196 components
-	\begin{figure}[!h]
-		\includegraphics[width=1\textwidth]{dh_betweenness_centrality_1_scout}
-	\end{figure}
-	\begin{figure}[!h]
-		\includegraphics[width=1\textwidth]{dh_betweenness_centrality_100_scouts}
-	\end{figure}
-	\paragraph{}
-	For random agents, the clustering coefficient is of $0$ and the betweenness centrality follow a classical curve.
-	We can conclude that the graph does not have clear clusters.
-	That was expected from the random graph, because the agents are just walking around.
-	The expected behaviour is to find them on the more important nodes, have a Page-rank like behaviour.
-	\begin{figure}[!h]
-	\includegraphics[width=1\textwidth]{dh_betweenness_centrality_random}
-	\captionof{figure}{Betweenness centrality figures for random agents}
-	\end{figure}
-
+		\paragraph{}
+			We formulate in the hypothesis that the crawled graph must differ between every kind of agents.
+			To prove this, we have been using Gephi\footnote{
+			Here is the software website \url{https://gephi.github.io/}
+			} to dig out some figures of our graphs.
+			The more representation figures were the betweenness centrality and the clustering coefficient.
+			The work on the graph is based on the content of the class "Networks ans graphs" followed this year,
+			which was referenced on this book \cite{Steen10}.
+		\paragraph{Test with 1 scout and 1000 steps}
+			The graph we got from such a configuration contains 1209 nodes and 998 edges.
+			The plot below is showing the curve of the nodes where the betweenness centrality is higher than 0.
+			1120 nodes have a null value for betweenness centrality, they are not represented here for more readability.
+			The null betweenness centrality means that no shortest path go through that specific node,
+			In our case, it concerns all the nodes on the edge of the graph which explain such a high value
+			(jumping around creates a lot of those nodes because it creates a lot of components).
+			The clustering coefficient is almost always equal to zero.
+			It means that when a scout finds information on a node, the path of the foragers is not crossing the path of the other foragers.
+			What is surprising is the number of components: the scout is supposed to jump from places to places 1000 times
+			but create only 211 components.
+			The only cases where a component is not created is if the scout is jumping on a node that already exists on one hand,
+			and when a forager meets a node that have been visited by another scout (then the 2 components become one).
+		\begin{figure}[!h]
+			\includegraphics[width=1\textwidth]{dh_betweenness_centrality_1_scout}
+		\end{figure}
+		\paragraph{Test with 100 scouts and 10 steps for each}
+			To see if the number of agents is a significant factor, we executed a test with 100 scouts that only jump 10 times.
+			The total number of steps stays the same and because the 100 agents are jumping randomly over the graph,
+			we could expect the same results as the one we got with one agent crawling over 1000 nodes.
+			The only difference is in the speed of the evaluation because 100 agents are easier to execute in parallel than one,
+			thus we get results faster.
+			The number of components is 196, quite close to 211.
+		\begin{figure}[!h]
+			\includegraphics[width=1\textwidth]{dh_betweenness_centrality_100_scouts}
+		\end{figure}
+		\paragraph{Test with 1 random agent and 1500 steps}
+			Here, we expect to find a full connected graph that is almost a tree (a cycle may occur, but unlikely).
+			The graph below show that over 881 nodes, some are on more than 30\% of all the shortest paths between every nodes.
+			That's much more than we got on the scouts plot about betweenness centrality.
+			Also, we can notice the small amount of edge nodes (106 over 881).
+			At last but not least, the density is null.
+		\begin{figure}[!h]
+			\includegraphics[width=1\textwidth]{dh_betweenness_centrality_1_random_agent}
+			\captionof{figure}{Betweenness centrality figures for random agents}
+		\end{figure}
+		\paragraph{Test with 100 random agents and 150 steps each}
+			Here, we have done 15 000 steps in total and we have only one component.
+			That means that the 100 agents crossed each other path to form one component in the end
+			(because they started from random nodes).
+			Also, the number of steps/agents does not matter because the results are quite the same with only 1 agent.
+		\begin{figure}[!h]
+			\includegraphics[width=1\textwidth]{dh_betweenness_centrality_100_random_agent}
+			\captionof{figure}{Betweenness centrality figures for random agents}
+		\end{figure}
+		\paragraph{Test with 1 ant agent and 1500 steps}
+			The ant agent show some surprising results.
+			First of all, some nodes have a betweenness centrality of 0.5,
+			that means that more than a half a the shortest path go through them, that's a lot.
+			We could imagine that those nodes are linked to a lot of other nodes and thus enable such quick path between 2 nodes.
+			However, we should have found such a node in the previous try as well.
+			We could suppose that the ant agent as created a main path and then get stuck on it because it gain some importance.
+			The density is not null,
+			so we could may be deduce that the component is more connected than the graph induced by the random agent.
+		\begin{figure}[!h]
+			\includegraphics[width=1\textwidth]{dh_betweenness_centrality_1_ant}
+			\captionof{figure}{Betweenness centrality figures for random agents}
+		\end{figure}
+		\paragraph{Test with 100 ant agents and 30 steps each}
+			As we already saw, the number of agents is not changing that much the results.
+			We can also say that the betweenness centrality of 0,5 was not fortunate because we have it again,
+			of course, t could be bias induced by the dataset, but it would have showed up for the previous agents as well.
+		\begin{figure}[!h]
+			\includegraphics[width=1\textwidth]{dh_betweenness_centrality_100_ants}
+			\captionof{figure}{Betweenness centrality figures for random agents}
+		\end{figure}
+		
 \section{Reflection}
 	\subsection{Dead end paths}
-	\paragraph{}
-	The LOD is a big graph on which it is really easy to get lost.
-	Especially in some dead end path, because the graph is oriented and going back is not easy.
-	We have a backtrack function in case of which we would have arrived on a literal (special case),
-	But this backtrack function is only limited to go one step backward.
-	Storing the whole path would be memory inefficient.
-	\paragraph{}
-	To solve this, we start an action when an agent detect when it is in a dead end path (when it can't go anywhere).
-	This specific action is quite simple, it start from the node where the agent got stuck and devalue the path to it.
-	To know the path, we just crawl the cache starting from the “blocking node”
-	and see if there are other possibilities that the one we come from.
-	If yes, it means that the node we just arrived on is the end of the dead end path.
-	If no, we just repeat the previous step to find that node which show the end of the path.
-	Also, we kill the agent and create a new one instead that will crawl from another place.
+		\paragraph{}
+			The LOD is a big graph on which it is really easy to get lost.
+			Especially in some dead end path, because the graph is oriented and going back is not easy.
+			We have a backtrack function in case of which we would have arrived on a literal (special case),
+			But this backtrack function is only limited to go one step backward.
+			Storing the whole path would be memory inefficient.
+		\paragraph{}
+			To solve this, we start an action when an agent detect when it is in a dead end path (when it can't go anywhere).
+			This specific action is quite simple, it start from the node where the agent got stuck and devalue the path to it.
+			To know the path, we just crawl the cache starting from the “blocking node”
+			and see if there are other possibilities that the one we come from.
+			If yes, it means that the node we just arrived on is the end of the dead end path.
+			If no, we just repeat the previous step to find that node which show the end of the path.
+			Also, we kill the agent and create a new one instead that will crawl from another place.
 	\subsection{Denied access}
-	\paragraph{}
-	The LOD contains some restricted area we the agents cannot go.
-	When an agent meet such a place, it just go backward of one step.
-	Sometimes, it is also because the server where we try to grab information from is down.
-	Some of them, like dbpedia have a live version of it which is sometime replacing the other one,
-	so we just try all different access point we know to get data from.
+		\paragraph{}
+			The LOD contains some restricted area we the agents cannot go.
+			When an agent meet such a place, it just go backward of one step.
+			Sometimes, it is also because the server where we try to grab information from is down.
+			Some of them, like dbpedia have a live version of it which is sometime replacing the other one,
+			so we just try all different access point we know to get data from.
 	\subsection{Difficult tests}
-	\paragraph{}
-	At the beginning, the agents used to go really often in dead en alley
-	or find information that is not in the right format and crashed.
-	That made the testing quite complicated, because the data we got from those agents was too diverse to be relevant.
-	The agents were to often far apart from each other (and the communication was quite useless then).
-	\subsection{Keep as minimum the communication between threads}
-	\paragraph{}
-	Even if we want the agents to communicate with each other, it is better if their communication remain light,
-	otherwise, they spend too much time waiting for each other and the efficiency becomes bad.
-	For example, the system we work on don't have a kind of mother-ship that give orders.
-	Each agent is working on his own and has is own independent functions.
-	\paragraph{}
-	A necessary communication that has been established between threads is a message system to get information about the thread,
-	like the number of steps taken.
+		\paragraph{}
+			At the beginning, the agents used to go really often in dead en alley
+			or find information that is not in the right format and crashed.
+			That made the testing quite complicated, because the data we got from those agents was too diverse to be relevant.
+			The agents were to often far apart from each other (and the communication was quite useless then).
+		\subsection{Keep as minimum the communication between threads}
+		\paragraph{}
+			Even if we want the agents to communicate with each other, it is better if their communication remain light,
+			otherwise, they spend too much time waiting for each other and the efficiency becomes bad.
+			For example, the system we work on don't have a kind of mother-ship that give orders.
+			Each agent is working on his own and has is own independent functions.
+		\paragraph{}
+			A necessary communication that has been established between threads is a message system to get information about the thread,
+			like the number of steps taken.
 
 \newpage
 \section{Conclusion}
 	\subsection{Results}
-	\paragraph{}
-	???
+		\paragraph{}
+			???
 	\subsection{Thanks}
-	\paragraph{}
-	I would like to thank the VU university from Amsterdam to makes me able to study here for this year.
-	I also want to thank Stefan for accepting me to do my Bachelor thesis with him
-	and I especially thank Wouter for his help during all this project.
+		\paragraph{}
+			I would like to thank the VU university from Amsterdam to makes me able to study here for this year.
+			I also want to thank Stefan for accepting me to do my Bachelor thesis with him
+			and I especially thank Wouter for his help during all this project.
 
 \newpage
 \bibliographystyle{plain}
